<resources>
    <string name="app_name">Gasto de Viagem</string>
    <string name="distancia">Distância</string>
    <string name="preco">Preço</string>
    <string name="preco1">Preço do Combustível</string>
    <string name="autonomia">Autonomia</string>
    <string name="total_de_kilometros">Total de Quilômetros</string>
    <string name="preco_por_litro">Quilômetro por Litro</string>
    <string name="seu_gasto_sera_de">Seu Gasto sera de</string>
    <string name="valor_total_rs">R$ 0</string>
    <string name="calcular">Calcular</string>
    <string name="preencha_todos_campos">Preencha Todos os Campos!</string>
    <string name="informe_valores_validos">Por Favor, Informar Valores Válidos</string>
</resources>
